sv number micro fix scroll appearing shift the content

--- a/sv/number/style.css
+++ b/sv/number/style.css
@@ -1,3 +1,12 @@
+html,body {
+  scrollbar-width: none; /* Firefox: hide scrollbar */
+  -ms-overflow-style: none; /* IE/Edge: hide scrollbar */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera: hide scrollbar */
+}
+
 .d13{ color: red; }
 .d46{ color: orange; }
 .d79{ color: yellow; }
